--- a/eventos.html
+++ b/eventos.html
@@ -8,11 +8,11 @@
     <title>eventos</title>
 </head>
 <header>
-    <a href="play.html"><img id="circulo" src="img/play2.png" alt=""></a>
+    <a href="play.html"><img id="circulo" src="img/play.png" alt=""></a>
    <header class="menu">
 
     <div>
-        <a href="index.html">
+        <a href="home.html">
         <img src="img/home2.png" alt="">
         </a>
     </div>
@@ -26,15 +26,31 @@
     </div>
 
     <div>
-        <img src="img/cassette.png" alt="">
+        <a href="cassete.html"><img src="img/music-player2.png" alt=""></a>
     </div>
 
     <div>
-        <img src="img/home.png" alt="">
+        <img src="img/logo2.png" alt="">
     </div>
 
 </header>
 <body>
-
+    <div class="garageplay">
+        <img src="img/Garagedate.png" alt="" width="140px">
+</div> 
+<div class="container-video">
+    <h1>Dezembro | 2019</h1>
+    <img src="img/evento1.png">
+    <img src="img/evento2.png">
+    <img src="img/evento3.png">
+   
+</div>
+<div class="container-video">
+    <h1>Janiero | 2020</h1>
+    <img src="img/evento1.png">
+    <img src="img/evento2.png">
+    <img src="img/evento3.png">
+   
+</div>
 </body>
 </html>
